sna: Use the provided bo for blitting rather than assume priv->gpu_bo

Reported-by: nkalkhof@web.de
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=43802
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>